# Matrix-Calculator

./: CMakeLists.txt  Compile.ps1  README.md
include/: Color.h  Evaluate.hpp  Frac.h  Matrix.h  Menu.hpp  Operations.hpp
src/: Color.cpp  Frac.cpp  Matrix_Functions.cpp  Matrix_Operators.cpp  main.cpp
